Fix mapcache stuff
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@7 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2005-09-04
+Map cache fix: if only one map can fit / one map is bigger than cache size, then that's OK.
+
 2005-08-18
 Map cache size based on memory usage, not number of images. Some flaws to be worked out still in this.
 
