Guilhem's Autotools support
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@11 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
+2005-09-07
+Autotools support by Guilhem Bonnefille.
+
 2005-09-06
 Added Alex Foobarian's track duration patch.
 Added Alex Foobarian's track profile patch.
+Added Alex Foobarian's elevation map fix.
 
 2005-09-04
 Map cache fix: if only one map can fit / one map is bigger than cache size, then that's OK.
