Update INSTALL file
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@13 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,15 @@
 UNIX:
+
 You must have GTK+ 2.2.0 or greater installed.
 
-cd src
+if from CVS:
+aclocal \
+&& autoheader \
+&& automake -a && automake \
+&& autoconf
+
+
+./configure
 make
 strip --strip-all viking # optional)
 cp viking /usr/local/bin # as root)
