--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2005-09-16
-Evan: GPX fixes
-Evan: So Geocaching .LOC _isn't_ GPX?!?!? Oh well, it's XML...
-Evan: GPX write, click v-vs-t diagram
 Alex Foobarian <foobarian@gmail.com>: fix to v-vs-t (better drawing)
+Evan:	* GPX fixes
+	* So Geocaching .LOC _isn't_ GPX?!?!? Oh well, it's XML...
+	* GPX write, click v-vs-t diagram
+	* Option to show stops in TRWLayer options, and stop_length
+	* Elevation plotting relative to min and max elevation in track.
+	* Option to do elevation plotting, and controlling relative height
+	* 20,400 LOC!!! YEAH!!!
 
 2005-09-15
 	* 4+ hours later and voila, GPX read support
