--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-27
+Alex Foobarian <foobarian@gmail.com:
+	* GtkUIManager/Toolbar
+	* DND in the LayersPanel
+
 2005-09-16
 Alex Foobarian <foobarian@gmail.com>: fix to v-vs-t (better drawing)
 Evan:	* GPX fixes
