--- a/TODO
+++ b/TODO
@@ -1,10 +1,13 @@
 TODO till release 0.1.1 "desilusión":
-CRASHES:
+IMPORTANT STUFF:
 	check out bgitemcount stuff in background.c (hangs on clear!)
-	try renaming a waypoint (track is OK):
-		"funky" & <stuff>
-		IO MORIRÒ D'AMORE
-		'
+	DND: make it an interface
+	DND: when moving layers, take into account the layer we're moving onto
+		and move it above.
+	DND: fix "(viking:3671): Gtk-CRITICAL **: gtk_tree_model_get_iter: assertion `path->depth > 0' failed"
+	Debugging output shouldn't be printf'd but we g_print'd, and we should have a DEBUG flag
+	Fix coord layer for various projections
+
 BIG THINGS:
 	selections (select area of waypoints, trackpoints, etc)
 	Clipboard done right -- GtkClipboard, between processes
@@ -462,7 +465,6 @@ then you need a duplicate function for each thing you want to copy. shouldn't be
 ~-~-~-~-~-~-~-~
 0.0.6 "Where no man has gone before"
 ---------------
-DnD
 Map Download Background Thread
 LibGpsPoint
 Settabl eFonts
