Added wp symbol support; added scale ruler
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@40 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,15 @@
+2005-09-29
+Alex Foobarian <foobarian@gmail.com>:
+	* Added support for waypoint symbols (changing, loading, saving), and a small number of icons.
+	* Added a scale ruler
+	* Changed panning to show less "garbage" in exposed areas
+	
 2005-09-28
 Evan:
 	* menu.xml & icons inline
 
 2005-09-27
-Alex Foobarian <foobarian@gmail.com:
+Alex Foobarian <foobarian@gmail.com>:
 	* GtkUIManager/Toolbar
 	* DND in the LayersPanel
 Evan:
