--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
-TODO till release 0.1.1 "desilusión":
+TODO till release 0.1.1:
 IMPORTANT STUFF:
+	GPX symbols
+	Option as to whether or not to show waypoint symbols (we may want to show 'x's or something, and may have a lot of wpt_dot icons)
+	Option as to whether or not to show unit scale (esp for exporting images)
+	fix save file thing
 	check out bgitemcount stuff in background.c (hangs on clear!)
 	g_dtostr instead of fprintf in the appropriate places
 	DND: make it an interface, so we don't mention VikTrwLayer in viktreeview.c
@@ -35,7 +39,6 @@ RATHER HARD FIXES:
 
 EASY FIXES:
 	"click to go there" elevation map: average out, not nearest trackpoint.
-	Option as to whether or not to show waypoint symbols.
 
 FEATURE WISHLIST (i.e. unlikely to get done):
 	hover over pic
