--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ IMPORTANT STUFF:
 	check out bgitemcount stuff in background.c (hangs on clear!)
 	g_dtostr instead of fprintf in the appropriate places
 X	DND: make it an interface, so we don't mention VikTrwLayer in viktreeview.c
-	DND: when moving layers, take into account the layer we're moving onto
+X	DND: when moving layers, take into account the layer we're moving onto
 		and move it above.
 X	(DND?) fix "(viking:3671): Gtk-CRITICAL **: gtk_tree_model_get_iter: assertion `path->depth > 0' failed"
 	Debugging output shouldn't be printf'd but we g_print'd, and we should have a DEBUG flag
