added GPX symbols
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@47 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 Alex Foobarian <foobarian@gmail.com>:
 	* Added a drag_drop_request method to layer interface, updated DnD to use it
 	* Updated DND to insert layers at the point of the drop, instead of front of list
+	* Added wp symbol support to gpx
 	
 2005-09-29
 Alex Foobarian <foobarian@gmail.com>:
