--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ Alex Foobarian <foobarian@gmail.com>:
 	* Added a drag_drop_request method to layer interface, updated DnD to use it
 	* Updated DND to insert layers at the point of the drop, instead of front of list
 	* Added wp symbol support to gpx
+	* Fixed name collisions during track/wp DND
 	
 2005-09-29
 Alex Foobarian <foobarian@gmail.com>:
