--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,5 @@
-Evan Battaglia <gtoevan@gmx.net>
+Evan Battaglia <gtoevan@gmx.net> ** Concept and main design/coding
+Alex Foobarian <foobarian@gmail.com> ** DND, icons, various other features/bugfixes
+Guilhem BONNEFILLE  <guilhem.bonnefille@laposte.net> ** Autotools
+
+Few other bugfixes/minor patches from various contributors. See ChangeLog for details.
