Name resolution for pasting wps&tracks
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@58 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-10-05
+Alex Foobarian <foobarian@gmail.com>:
+	* Change clipboard so as to use GTKClipboard. Prepare for support for pasting coordinates, etc.
+Evan Battaglia <gtoevan@gmx.net>:
+	* When pasting waypoints and tracks, do name resolution (add #2, etc)
+
 2005-10-01
 Evan Battaglia <gtoevan@gmx.net>:
 	* make symbols work for geocaching .loc files (and case-insensitive symbol names)
