--- a/TODO
+++ b/TODO
@@ -1,10 +1,29 @@
+clipboard ideas:
+----------------------------
+option 1) use gtkclipboard for pasting what we can; use internal clipboard
+	  for viking data. viking data isn't useful to other programs.
+
+option 2) use gtkclipboard for viking data. if I try to paste viking data as
+	  text, this can do something useful, depending on the layer. it can
+	  paste as GPX if you copy a track, waypoint, or whole viktrwlayer.
+	  other layers? maplayer? georeflayer (world file)? paste a track as
+	  an image, past a waypoint as coordinates to plug into geocaching.com,
+	  ideas?
+
 TODO till release 0.1.1:
+
+
 IMPORTANT STUFF:
 	check out bgitemcount stuff in background.c (hangs on clear!)
+	fix weird VikTreeview crashes, possibly related to DND, possibly more than one bug
+		** ERROR **: file vikaggregatelayer.c: line 233 (disconnect_layer_signal): assertion failed: (DISCONNECT_UPDATE_SIGNAL(vl,val)==1)
+
 	g_dtostr instead of fprintf in the appropriate places
 	Debugging output shouldn't be printf'd but we g_print'd, and we should have a DEBUG flag
+	fix KH maps download
 
 BIG THINGS:
+	DND between VikWindows
 	Fix coord layer for various projections
 	selections (select area of waypoints, trackpoints, etc)
 	Clipboard done right -- GtkClipboard, between processes
