Added support for pasting lat/lon coordinates as waypoints
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@59 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-06
+Alex Foobarian <foobarian@gmail.com>:
+        * Added support for pasting coordinates in lat/lon format
+
 2005-10-05
 Alex Foobarian <foobarian@gmail.com>:
 	* Change clipboard so as to use GTKClipboard. Prepare for support for pasting coordinates, etc.
