Added ruler drawing to the ruler tool
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@61 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-07
+Alex Foobarian <foobarian@gmail.com>:
+        * Added ruler drawing to the ruler tool
+
 2005-10-06
 Alex Foobarian <foobarian@gmail.com>:
         * Added support for pasting coordinates in lat/lon format
