Draw a compass and bearing while using the ruler
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@64 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-11
+Alex Foobarian <foobarian@gmail.com>:
+        * Draw a compass when using a ruler
+
 2005-10-07
 Alex Foobarian <foobarian@gmail.com>:
         * Added ruler drawing to the ruler tool
