--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-13
+Alex Foobarian <foobarian@gmail.com>:
+        * Drag and drop whole track/waypoint lists
+
 2005-10-12
 Alex Foobarian <foobarian@gmail.com>:
         * Coord layer drawing for lat/lon based projections
