--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-16
+Evan Battaglia <gtoevan@gmx.net>
+	* Fix ruler: show angle, distance even when compass off-screen.
+
 2005-10-13
 Alex Foobarian <foobarian@gmail.com>:
         * Drag and drop whole track/waypoint lists
