Some work on zoom-in overflow bugs
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@73 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@ BEFORE RELEASE:
 	arrows to show track direction
 
 EASY FIXES:
+	"Interesting" stuff happens when we swich modes while using the ruler.
 	"click to go there" elevation map: average out, not nearest trackpoint.
 	Ruler: calculate degrees by spherical geometry formula ('zoom in too much' bug -- coord_to_screen out of range of double)
 		for UTM: rotate compass for declination.
