Relocating icons.h in order to better handle its prodution
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@75 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-10-17  Guilhem BONNEFILLE  <guilhem.bonnefille@laposte.net>
+	* src/icons/Makefile.am: assumes the creation of icons.h
+	* src/garminsymbols.c, src/vikwindow.c: icons.h re-located
+	* src/Makefile.am: no more icons.h production
+
 2005-10-16
 Evan Battaglia <gtoevan@gmx.net>
 	* Fix ruler: show angle, distance even when compass off-screen.
