Adding --with-mapcache to configure
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@78 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-28  Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com>
+	* configure.ac: Adding --with-mapcache configure option
+	* src/config.h: Removed because no more used (generated)
+
 2005-10-18
 Alex Foobarian <foobarian@gmail.com>:
         * Fix ruler declination in UTM mode
