--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-17
+Alex Foobarian <foobarian@gmail.com>:
+        * Copy/paste between viking processes
+	* Layer marshalling support
+
 2005-10-28  Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com>
 	* configure.ac: Adding --with-mapcache configure option
 	* src/config.h: Removed because no more used (generated)
