--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-18
+Alex Foobarian <foobarian@gmail.com>:
+        * Copy/paste of individual track- and way-points updated to work between processes.
+
 2005-11-17
 Alex Foobarian <foobarian@gmail.com>:
         * Copy/paste between viking processes
