--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-19
+Alex Foobarian <foobarian@gmail.com>:
+	* GPSBabel acquire code
+
 2005-11-18
 Alex Foobarian <foobarian@gmail.com>:
         * Copy/paste of individual track- and way-points updated to work between processes.
