--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-21
+Alex Foobarian <foobarian@gmail.com>:
+	* Fixed v-t diagram crash bug
+
 2005-11-19
 Alex Foobarian <foobarian@gmail.com>:
 	* GPSBabel acquire code
