Better GPX export
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@92 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-23  Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com>
+
+	* src/gpx.c (gpx_dtostr): add better GPX export
+
 2005-11-21
 Alex Foobarian <foobarian@gmail.com>:
 	* Fixed v-t diagram crash bug
