Locale-independent output for gpsmapper.c and gpspoint.c
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@93 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2005-11-23  Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com>
-
 	* src/gpx.c (gpx_dtostr): add better GPX export
+Evan Battaglia <gtoevan@gmx.net>:
+	* dtostr -> coords.c; use in gpsmapper.c and gpspoint.c (locale-independent output)
 
 2005-11-21
 Alex Foobarian <foobarian@gmail.com>:
