Geocaching.com (via gcget) data source
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@98 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 2005-11-25
+Evan Battaglia <gtoevan@gmx.net>
 	* Created "data sources" structure to easily add new data sources via GPS babel.
           It's ugly now and there's a lot to be done, but I think 79-line datasources_google.c
           shows the power of the approach.
+	* Data sources: Google & Geocaches
 
 2005-11-23  Guilhem BONNEFILLE  <guilhem.bonnefille@gmail.com>
 	* src/gpx.c (gpx_dtostr): add better GPX export
