--- a/TODO
+++ b/TODO
@@ -5,12 +5,13 @@ BEFORE RELEASE:
 	acquire crashes, sometimes (???)
 	google maps download stops (try auto-download), extra processes in background doing nothing
 	GPSBABEL!!!
+		* existence checkers function, use for unbuffer, gcget, sed, wget, etc.
+		* error if gcget isn't functioning correctly
 		* Smooth over rough edges / ugliness / crashes
 		* Google address -> WP
 		* handling of special characters (both to wget/HTTP and shell) -- don't allow backdoor tricks
-		* ADD to a layer instead of make a new layer (maybe right click layer -> new track from Google or something)
 		* Filter a TRW layer: simplify paths, get out waypoints inside a path, etc.
-		* Geotoad
+		* geocaches: all on screen / radius
 
 FEATURES:
 	Paste GPX files into Viking -> TRW Layer
@@ -18,17 +19,9 @@ FEATURES:
 	Undo function
 	Map licensing issues (?)
 	DND between VikWindows
-	direct GPS support
+	direct GPS support (instant)
 	arrows to show track direction
 	Select multiple items (waypoints, etc) in layers panel (???)
-	Import from:
-		* Google (address -> WP)
-			 (directions -> track)
-		* Geocaching via GeoToad (just give me the params, I'll load 'em)
-			goto diff areas of map
-			download caches
-			merge layers
-			ENJOY...
 	Merge layers easier ("Merge down" à la Gimp)
 	Output to GPS?
 	Output to gc2visor
